--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Tic tac toe</title>
 
     <script src="assets/libs/bower_components/angular/angular.js"></script>
+    <script src="assets/libs/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="assets/libs/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Modules -->
